NTP dark mode fixes
- Fixed Chrome 3 - 5 not using white variant of Google Chrome logo in dark mode;
- Added dark theme to Chrome 3 lower sections in dark mode;
- Fixed Chrome 21 footer not getting dark themed in dark mode;
- Fixed apps link having an invert filter in dark mode in Chrome 47 - 68;
- Fixed Chrome 68 tiles not getting dark themed in dark mode.

--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-21/_footer.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-21/_footer.scss
@@ -28,124 +28,122 @@
 	// Custom theme support
 	// lwtheme
 	&:not([lwtheme-id*="default-theme"], [lwtheme-id*="compact-light"]) {
-		&:not([lwtheme-id*="firefox-compact"], [lwtheme-id*="compact-light"]) {
-			&[lwtheme-id*="{"],
-			&[lwtheme-id*="@mozilla.org"] {
-				&:not([lwtheme-id*="#{$gtkplus}"]) {
-					--footer-border: linear-gradient(
-						to left,
+		&[lwtheme-id*="{"],
+		&[lwtheme-id*="@mozilla.org"] {
+			&:not([lwtheme-id*="#{$gtkplus}"]) {
+				--footer-border: linear-gradient(
+					to left,
+					color-mix(
+						in srgb,
+						color-mix(in srgb, var(--lwt-accent-color) 10%, black)
+							20%,
+						transparent
+					),
+					/* COLOR_NTP_SECTION_BORDER */
+					color-mix(
+						in srgb,
 						color-mix(
-							in srgb,
-							color-mix(in srgb, var(--lwt-accent-color) 10%, black)
-								20%,
-							transparent
-						),
-						/* COLOR_NTP_SECTION_BORDER */
-							color-mix(
 								in srgb,
-								color-mix(
-										in srgb,
-										var(--lwt-accent-color) 10%,
-										black
-									)
-									30%,
-								transparent
+								var(--lwt-accent-color) 10%,
+								black
+							)
+							30%,
+						transparent
+					)
+					20%,
+					/* COLOR_NTP_SECTION_BORDER */
+					color-mix(
+						in srgb,
+						color-mix(
+								in srgb,
+								var(--lwt-accent-color) 10%,
+								black
+							)
+							30%,
+						transparent
+					)
+					80%,
+					/* COLOR_NTP_SECTION_BORDER */
+					color-mix(
+						in srgb,
+						color-mix(
+								in srgb,
+								var(--lwt-accent-color) 10%,
+								black
 							)
 							20%,
-						/* COLOR_NTP_SECTION_BORDER */
-							color-mix(
-								in srgb,
-								color-mix(
-										in srgb,
-										var(--lwt-accent-color) 10%,
-										black
-									)
-									30%,
-								transparent
-							)
-							80%,
-						/* COLOR_NTP_SECTION_BORDER */
-							color-mix(
-								in srgb,
-								color-mix(
-										in srgb,
-										var(--lwt-accent-color) 10%,
-										black
-									)
-									20%,
-								transparent
-							)
-					);
-					
+						transparent
+					)
+				);
+				
 
-					&[footer-themable="true"] {
+				&[footer-themable="true"] {
+					--footer-background: linear-gradient(
+						to bottom,
+						color-mix(
+							in srgb,
+							var(--lwt-accent-color) 90%,
+							transparent
+						),
+						color-mix(
+							in srgb,
+							color-mix(in srgb, var(--lwt-accent-color) 65%, black)
+								90%,
+							transparent
+						)
+					);
+					--footer-color: var(--lwt-text-color);
+	
+					--dot-color-normal: color-mix(
+						in srgb,
+						var(--lwt-text-color) 20%,
+						gray
+					);
+					--dot-color-hot: var(--lwt-text-color);
+					--selection-bar-background-color-normal: color-mix(
+						in srgb,
+						var(--lwt-text-color) 20%,
+						transparent
+					);
+					--selection-bar-background-color-hot: color-mix(
+						in srgb,
+						var(--lwt-text-color) 40%,
+						transparent
+					);
+					--selection-bar-background-color-active: var(--lwt-text-color);
+	
+					--footer-item-color-hot: color-mix(
+						in srgb,
+						var(--lwt-text-color) 90%,
+						black
+					);
+					--footer-menu-button-glyph-background-color-normal: var(
+						--lwt-text-color
+					);
+					--footer-menu-item-link-color: var(--lwt-accent-color);
+					--footer-vertical-separator-background-color: color-mix(
+						in srgb,
+						var(--lwt-text-color) 40%,
+						transparent
+					);
+
+					@media (prefers-color-scheme: dark) {
 						--footer-background: linear-gradient(
 							to bottom,
-							color-mix(
-								in srgb,
-								var(--lwt-accent-color) 90%,
-								transparent
-							),
-							color-mix(
-								in srgb,
-								color-mix(in srgb, var(--lwt-accent-color) 65%, black)
-									90%,
-								transparent
-							)
+							rgba(53, 53, 53, 0.9),
+							rgba(31, 31, 31, 0.9)
 						);
-						--footer-color: var(--lwt-text-color);
-		
-						--dot-color-normal: color-mix(
-							in srgb,
-							var(--lwt-text-color) 20%,
-							gray
-						);
-						--dot-color-hot: var(--lwt-text-color);
-						--selection-bar-background-color-normal: color-mix(
-							in srgb,
-							var(--lwt-text-color) 20%,
-							transparent
-						);
-						--selection-bar-background-color-hot: color-mix(
-							in srgb,
-							var(--lwt-text-color) 40%,
-							transparent
-						);
-						--selection-bar-background-color-active: var(--lwt-text-color);
-		
-						--footer-item-color-hot: color-mix(
-							in srgb,
-							var(--lwt-text-color) 90%,
-							black
-						);
-						--footer-menu-button-glyph-background-color-normal: var(
-							--lwt-text-color
-						);
-						--footer-menu-item-link-color: var(--lwt-accent-color);
-						--footer-vertical-separator-background-color: color-mix(
-							in srgb,
-							var(--lwt-text-color) 40%,
-							transparent
-						);
-
-						@media (prefers-color-scheme: dark) {
-							--footer-background: linear-gradient(
-								to bottom,
-								rgba(53, 53, 53, 0.9),
-								rgba(31, 31, 31, 0.9)
-							);
-							--footer-color: #b8b8b8;
-				
-							--dot-color-normal: rgba(255, 255, 255, 0.2);
-							--dot-color-hot: #9e9e9e;
-							--selection-bar-background-color-normal: rgba(255, 255, 255, 0.1);
-							--selection-bar-background-color-hot: #535353;
-							--selection-bar-background-color-active: #9e9e9e;
-				
-							--footer-menu-button-glyph-background-color-normal: #b8b8b8;
-							--footer-menu-item-link-color: #acc0da;
-							--footer-vertical-separator-background-color: rgb(100, 100, 100);
-						}
+						--footer-color: #b8b8b8;
+			
+						--dot-color-normal: rgba(255, 255, 255, 0.2);
+						--dot-color-hot: #9e9e9e;
+						--selection-bar-background-color-normal: rgba(255, 255, 255, 0.1);
+						--selection-bar-background-color-hot: #535353;
+						--selection-bar-background-color-active: #9e9e9e;
+			
+						--footer-menu-button-glyph-background-color-normal: #b8b8b8;
+						--footer-menu-item-link-color: #acc0da;
+						--footer-vertical-separator-background-color: rgb(100, 100, 100);
 					}
 				}
 			}
