--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-3/_final.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-3/_final.scss
@@ -59,6 +59,10 @@
 &[geckium-choice="six"] {
 	#main {
 		background: url(chrome://userchrome/content/pages/newTabHome/assets/chrome-3/product_logo.png) no-repeat 0px 8px;
+	
+		@media (prefers-color-scheme: dark) {
+			background: url(chrome://userchrome/content/pages/newTabHome/assets/chrome-3/product_logo_alternate.png) no-repeat 0px 8px;
+		}
 	}
 
 	&[style*="--chrt-ntp-logo-alternate: 1"] {
