--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-68/_most-visited.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-68/_most-visited.scss
@@ -1,5 +1,9 @@
 & {
 	--tile-background: rgb(250,250,250);
+
+	@media (prefers-color-scheme: dark) {
+		--tile-background: rgb(77, 77, 77);
+	}
 }
 
 .mv-tile {
